--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,20 @@ p {
   padding-bottom: 24px;
 }
 
-.head-logo {
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-navigation {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  margin-right: 90px;
+  justify-content: space-between;
+}
+
+.header-logo {
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
@@ -72,9 +85,11 @@ p {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  display: flex;
+  align-items: center;
 }
 
-.head-logo-studio {
+.header-logo-studio {
   color: #2e2f42;
   font-family: "Raleway";
   font-size: 18;
@@ -82,6 +97,11 @@ p {
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+
+.navi-list {
+  display: flex;
+  gap: 40px;
 }
 
 .navi-item {
@@ -98,8 +118,13 @@ p {
   color: #404bbf;
 }
 
-.location {
+.adress {
   font-style: normal;
+}
+
+.contacts-list {
+  display: flex;
+  gap: 40px;
 }
 
 .contacts {
