--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ p {
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
+  border-bottom: border-bottom: 1px solid #E7E9FC;;
 }
 
 .header-container {
@@ -111,6 +112,8 @@ p {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding: 24px 0;
+  display: block;
 }
 
 .navi-item:hover,
@@ -160,14 +163,22 @@ p {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  display: block;
+  padding: 16px 32px;
   margin: 0 auto;
+  display: block;
   margin-top: 48px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background-color: #404bbf;
+}
+
+.features-list {
+  display: flex;
+  gap: 24px;
 }
 
 .features-title {
@@ -179,6 +190,10 @@ p {
   margin-bottom: 8px;
 }
 
+.features-item {
+  width: calc((100% - 72px) / 4);
+}
+
 .features-text {
   color: #434455;
   font-size: 16px;
@@ -188,6 +203,10 @@ p {
 
 .team {
   background-color: #f4f4fd;
+}
+
+.team-list {
+  display: flex;
 }
 
 .team-title {
@@ -203,6 +222,7 @@ p {
 
 .team-item {
   background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
 }
 
 .team-persons {
@@ -220,8 +240,17 @@ p {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 32px;
 }
 
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.portfolio-item {
+  width: calc((100% - 96) / 4);
+}
 .portfolio-title {
   color: #2e2f42;
   text-align: center;
