--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ p {
   text-transform: uppercase;
   display: flex;
   align-items: center;
+  margin-right: 76px;
 }
 
 .header-logo-studio {
@@ -98,7 +99,6 @@ p {
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-right: 76px;
 }
 
 .navi-list {
@@ -145,6 +145,7 @@ p {
 
 .hero {
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 
 .hero-title {
@@ -154,6 +155,7 @@ p {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  max-width: 496px;
 }
 
 .hero-button {
@@ -170,6 +172,9 @@ p {
   margin-top: 48px;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  min-width: 169px;
+  height: 56px;
+  border: none;
 }
 
 .hero-button:hover,
@@ -290,6 +295,8 @@ p {
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .hell-text {
