--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ p {
   padding: 0;
   white-space: nowrap;
   clip-path: inset(100%);
+  clip: rect(0 0 0 0);
   overflow: hidden;
 }
 
@@ -285,10 +286,10 @@ p {
 
 .hell {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 
-.foot-logo-studio {
-  color: #f4f4fd;
+.foot-logo {
   font-family: "Raleway";
   font-size: 18;
   font-weight: 700;
@@ -297,10 +298,16 @@ p {
   text-transform: uppercase;
   display: inline-block;
   margin-bottom: 16px;
+  color: #4d5ae5;
+}
+
+.foot-logo-studio {
+  color: #f4f4fd;
 }
 
 .hell-text {
   color: #f4f4fd;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  max-width: 264px;
 }
