--- a/css/styles.css
+++ b/css/styles.css
@@ -61,8 +61,6 @@ p {
 }
 
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
   border-bottom: 1px solid #e7e9fc;
 }
 
@@ -74,8 +72,7 @@ p {
 .header-navigation {
   display: flex;
   align-items: center;
-  flex-grow: 1;
-  margin-right: 90px;
+  margin-right: auto;
   justify-content: space-between;
 }
 
@@ -123,7 +120,7 @@ p {
   color: #404bbf;
 }
 
-.adress {
+.address {
   font-style: normal;
 }
 
